--- a/docs/emails.Rmd
+++ b/docs/emails.Rmd
@@ -9,6 +9,46 @@ showDate: false
 
 Please note that not all links will be available as this is an archive of the emails. Check the Announcements page for active links to conference submissions and other nominations.
 
+### SCiP 2025 Call for Submissions
+
+2025 Conference Information 
+
+We now invite nominations for candidates for [a] three positions on the Society's Steering Committee, [b] for the new President-Elect. All members are invited to participate in this process. Learn more about the nomination process and voting [here](https://computationinpsych.com/governance/). You can nominate yourself or others while submitting your abstract for the conference. Note you can also just nominate individuals without submitting an abstract. [Use this submission form for nominations and abstract submission](https://forms.gle/pnaYKzVYnJSPT3Mm8). 
+
+The 55th annual meeting of the Society for Computation in Psychology (SCiP) is pleased to announce its call for abstracts. The meeting will be held on Thursday, November 20, 2025, before the opening of the annual meeting of the Psychonomic Society. We invite you to submit your abstract by *August 31, 2025*. We will be holding this event in person in Denver in tandem with the [Psychonomic Society Meeting](https://www.psychonomic.org/page/2025annualmeeting).
+
+
+The theme for this year’s conference is *Computation Everywhere: Studying Cognition in Environments of Technological Ubiquity*. In a time where computers and AI proliferate all aspects of our lives, how do we harness the rapidly evolving power of computation to study cognition? We encourage our members to share this call with others who are doing related work but who may not be regular SCiP attendees. To submit an abstract or symposium proposal, please follow the instructions on [our online submission form](https://forms.gle/pnaYKzVYnJSPT3Mm8) or linked on our website. Please consider forwarding our conference call to folks around your department (especially if they have been unable to attend SCiP in the past). We hope to see you there!
+
+2025 Student Award Information
+
+First-time graduate student presenters are strongly encouraged to submit abstracts. If you are a first-time graduate student attending SCiP, and the primary presenter, you may be eligible to have your registration waived as part of the *Birnbaum Scholarship* for first-time graduate presenters. Please contact our Executive Director, Erin Buchanan at compinpsych@gmail.com for details. 
+
+The Society sponsors The Castellan Student Paper Award for the outstanding student paper. Student papers should consist of a brief introduction, methods, and results *(up to 3000 words, excluding references, tables, figures, and a title page)*. Student papers on the application of computers to any area of psychology (theoretical, experimental, applied) are welcome. Eligibility is open to work done by a student currently enrolled in undergraduate or graduate courses, or work done as part of a course, thesis, or other student research by a person who graduated within the last year. The student must be the primary author and the presenter of the paper. The winning author will receive a one year membership in the Society and a $200 cash prize. Students are required to submit the complete manuscript for evaluation for the competition by *October 15th, 2025*. The award for the outstanding student paper will be announced after the conference. 
+
+### Action Requested: Vote on Steering Committee, President, and Bylaws Updates sent
+
+** SCiP: Member Vote on Leadership and Bylaws**
+
+We invite you to participate in an important vote to confirm Society leadership and review updates to our governing documents.
+
+This vote includes:
+* Confirmation of incoming Steering Committee members
+* Confirmation of the President
+* Review and approval of proposed bylaws revisions
+
+The proposed bylaw changes are summarized in the voting form and are available in full at the following link: [Bylaws Document](https://docs.google.com/document/d/16M0Gxi4q4ArltfbppbhIbrAyVmmCdtiZ/edit?usp=sharing)
+
+To cast your vote, please complete the following form: [Member Voting Form](https://docs.google.com/forms/d/e/1FAIpQLScguIOuDxsXN1TQJtUicHZbnst9LE1OCCTOdO4npWNc_PWYvw/viewform?usp=dialog)
+
+We ask that all votes be submitted by July 15th.
+
+The call for submissions will appear after this vote commences - keep an eye out!
+
+Thank you!
+
+Erin Buchanan, Executive Director
+
 ### Program, Late Breaking Posters, Conference Registration - October 17th, 2024
 
 SCiP 2024 Conference
