--- a/docs/post/announcements.Rmd
+++ b/docs/post/announcements.Rmd
@@ -15,19 +15,20 @@ knitr::include_graphics("https://raw.githubusercontent.com/Society-for-Computati
 
 You can view our previous emails to the society [using this link](/emails/). 
 
-### 2024 Conference Information 
+### 2025 Conference Information 
 
-Thanks for a great conference! See you next year in Denver.
+We now invite nominations for candidates for [a] three positions on the Society's Steering Committee, [b] for the new President-Elect. All members are invited to participate in this process. Learn more about the nomination process and voting [here](https://computationinpsych.com/governance/). You can nominate yourself or others while submitting your abstract for the conference. Note you can also just nominate individuals without submitting an abstract. [Use this submission form for nominations and abstract submission](https://forms.gle/pnaYKzVYnJSPT3Mm8). 
 
-### 2024 Student Award Information
+The 55th annual meeting of the Society for Computation in Psychology (SCiP) is pleased to announce its call for abstracts. The meeting will be held on Thursday, November 20, 2025, before the opening of the annual meeting of the Psychonomic Society. We invite you to submit your abstract by *August 31, 2025*. We will be holding this event in person in Denver in tandem with the [Psychonomic Society Meeting](https://www.psychonomic.org/page/2025annualmeeting).
 
-We had two winners this year! Congrats to Abi Sipes and Zhen Zu. You can view the award page to check out their paper information.
 
-PeerJ supports early career researchers by offering free publication to the 2024 Castellan Award winner, along with an interview about their research. You can find an example [here](https://peerj.com/blog/post/115284886860/peerj-award-winners-18imco/). We thank them for supporting SCiP's award winners! 
+The theme for this year’s conference is *Computation Everywhere: Studying Cognition in Environments of Technological Ubiquity*. In a time where computers and AI proliferate all aspects of our lives, how do we harness the rapidly evolving power of computation to study cognition? We encourage our members to share this call with others who are doing related work but who may not be regular SCiP attendees. To submit an abstract or symposium proposal, please follow the instructions on [our online submission form](https://forms.gle/pnaYKzVYnJSPT3Mm8) or linked on our website. Please consider forwarding our conference call to folks around your department (especially if they have been unable to attend SCiP in the past). We hope to see you there!
 
-```{r echo = F, fig.align='center', fig.alt="SCiP Sponsors", out.height="80%"}
-knitr::include_graphics("https://raw.githubusercontent.com/Society-for-Computation-in-Psychology/Society-for-Computation-in-Psychology.github.io/master/files/imgs/PeerJ.jpg")
-```
+### 2025 Student Award Information
+
+First-time graduate student presenters are strongly encouraged to submit abstracts. If you are a first-time graduate student attending SCiP, and the primary presenter, you may be eligible to have your registration waived as part of the *Birnbaum Scholarship* for first-time graduate presenters. Please contact our Executive Director, Erin Buchanan at compinpsych@gmail.com for details. 
+
+The Society sponsors The Castellan Student Paper Award for the outstanding student paper. Student papers should consist of a brief introduction, methods, and results *(up to 3000 words, excluding references, tables, figures, and a title page)*. Student papers on the application of computers to any area of psychology (theoretical, experimental, applied) are welcome. Eligibility is open to work done by a student currently enrolled in undergraduate or graduate courses, or work done as part of a course, thesis, or other student research by a person who graduated within the last year. The student must be the primary author and the presenter of the paper. The winning author will receive a one year membership in the Society and a $200 cash prize. Students are required to submit the complete manuscript for evaluation for the competition by *October 15th, 2025*. The award for the outstanding student paper will be announced after the conference. 
 
 ### Special Section of Behavior Research Methods
 
