adding scip ads for iscience

--- a/content/post/announcements.Rmd
+++ b/content/post/announcements.Rmd
@@ -30,6 +30,19 @@ First-time graduate student presenters are strongly encouraged to submit abstrac
 
 The Society sponsors The Castellan Student Paper Award for the outstanding student paper. Student papers should consist of a brief introduction, methods, and results *(up to 3000 words, excluding references, tables, figures, and a title page)*. Student papers on the application of computers to any area of psychology (theoretical, experimental, applied) are welcome. Eligibility is open to work done by a student currently enrolled in undergraduate or graduate courses, or work done as part of a course, thesis, or other student research by a person who graduated within the last year. The student must be the primary author and the presenter of the paper. The winning author will receive a one year membership in the Society and a $200 cash prize. Students are required to submit the complete manuscript for evaluation for the competition by *October 15th, 2025*. The award for the outstanding student paper will be announced after the conference. 
 
+### Special Announcement for 6th Summer School on Internet-based Data Collection and Analysis
+
+**October 13–17, 2025 @ University of Konstanz** 
+
+Hosted by the [iScience research group](https://www.uni-konstanz.de/iscience/) at the Department of Psychology, University of Konstanz.  
+
+👉 **[Apply here](https://iscience.uni-konstanz.de/collaborations/6th-konstanz-summer-school-on-internet-based-data-collection-and-analysis/)**  
+
+📅 **Deadline:** October 1, 2025 (Early bird fee ends September 15)
+
+[Learn more by downloading this information sheet.](https://computationinpsych.com/docs/post/iscience_2025.docx)
+
+
 ### Special Section of Behavior Research Methods
 
 [View the collection](https://link.springer.com/collections/cbcgciabad)
